fix line number align with padding

--- a/src/main/resources/com/zestedesavoir/zestwriter/css/editor.css
+++ b/src/main/resources/com/zestedesavoir/zestwriter/css/editor.css
@@ -13,5 +13,6 @@
 }
 
 .lineno {
-    -fx-alignment: baseline-left;
+    -fx-alignment: top-left;
+    -fx-label-padding: 5, 5, 5, 5;
 }
